Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjIntegerWrapped.quorum
class main
    action main
        Text t = 5
    end
end